Initial commit, containing extracted expectj classes from ats framework